syntax = "proto3";

package pb;

import "user.proto";

option go_package = "main/pb";

message LoginUserReq {      
	string email = 1;
	string password = 2;
};
message LoginUserRes {      
	string status = 1;
	User data = 2;
	string access_token = 3;
	string refresh_token = 4;
};
