syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "google/api/annotations.proto";
option go_package = "main/pb";

service SimpleBank {
    rpc CreateUser (CreateUserReq) returns (CreateUserRes) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    rpc LoginUser (LoginUserReq) returns (LoginUserRes) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
    }
}